--- a/views/index.ejs
+++ b/views/index.ejs
@@ -43,7 +43,7 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">Intro</h2>
-								<!-- <span class="image main"><img src="/images/pic01.jpg" alt="" /></span> -->
+								<span class="image main"><img src="/images/pic01.jpg" alt="" /></span>
 								<p>This is a small intro about myself, my motivations and my life, if you want to directly see <a href="#work">my work</a> be sure to click the link, hope you like it.</p>
 								<p>I once heard a saying that goes by "Everything starts with a dream", however my starts on coding were more likely to be started by a simple motivation. I was born and raised in Venezuela, a country that used to be way much more in so many ways, than it is at the moment. My motivation is simple, I have a dog and her name is Akira(she is up there in the photo!), buying barely 5 pounds of food for her is already 2 minimum salaries, so in order to make enough for us to eat, I started trading Cryptos besides my full-time job, Cryptos led to Ethereum, Blockchain, Solidity and Smart Contracts and that finally led to me being a developer! Anyways facts say much more than words so let <a href="#work">my work</a> speak for me.</p>
 							</article>
@@ -51,7 +51,7 @@
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work</h2>
-								<!-- <span class="image main"><img src="/images/pic02.jpg" alt="" /></span> -->
+								<span class="image main"><img src="/images/pic02.jpg" alt="" /></span>
 								<p>In the next section I will show you the links alongside a brief explanation about some of the apps I've made, hope you enjoy!</p>
 								<h3>Venezuela Tours</h3>
 								<p><a href="https://vzlatours.herokuapp.com">Venezuela Tours</a> is a small production site I made which consist in a place where you can store your own toursites(Hotels, Inns, Parks) and set a price per night, you can register and comment on other toursites too posted by other users, Uses a simple MEN stack so any reactiva framework can be applied. Check out the <a href="https://vzlatours.herokuapp.com">app</a> and the code at <a href="https://github.com/Wayhem/vzla-tour">GitHub</a></p>
@@ -62,7 +62,7 @@
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
-								<!-- <span class="image main"><img src="/images/pic03.jpg" alt="" /></span> -->
+								<span class="image main"><img src="/images/pic03.jpg" alt="" /></span>
 								<p>So now you know how I work and who I am, feel free to employ me anytime, anywhere! I am passionate developer and a really responsible one, so challenge me to do what needs to be done! Hoped you enjoyed my portfolio.</p>
 							</article>
 
