--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,6 +33,7 @@
 								<li><a href="#work">Work</a></li>
 								<li><a href="#about">About</a></li>
 								<li><a href="#contact">Contact</a></li>
+								<li><a href="/download">Resume</a></li>
 							</ul>
 						</nav>
 					</header>
