--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -17,3 +17,79 @@ html {
     max-width: 1140px;
     margin: 0 auto;
 }
+
+header {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(/images/main.jpg);
+    height: 100vh;
+    background-size: cover;
+    background-position: center;
+}
+
+.main-text-box {
+    position: absolute;
+    width: 1140px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%)
+}
+
+h1 {
+    margin-top: 0;
+    margin-bottom: 0.2rem;
+    color: #fff;
+    font-size: 2.4rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    word-spacing: 3px;
+}
+
+h2 {
+    margin-top: 0;
+    margin-bottom: 1rem;
+    color: #fff;
+    font-size: 1.4rem;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    word-spacing: 3px;
+}
+
+.button:link,
+.button:visited {
+    display: inline-block;
+    padding: 0.5rem 1.5rem;
+    font-weight: 300;
+    text-decoration: none;
+    border-radius: 10rem;
+    transition: background-color 0.3s, border 0.3s, color 0.3s;
+    margin-right: 0.5rem;
+}
+
+.button-full:link,
+.button-full:visited {
+    background-color: #2196f3;
+    border: 1px solid #2196f3;
+    color: #fff;
+}
+
+.button-outline:link,
+.button-outline:visited {
+    border: 1px solid #2196f3;
+    color: #2196f3;
+}
+
+.button:hover,
+.button:active {
+    background-color: #0c7cd6;
+}
+
+.button-full:hover,
+.button-full:active {
+    border: 1px solid #0c7cd6;
+}
+
+.button-outline:hover,
+.button-outline:active {
+    border: 1px solid #0c7cd6;
+    color: #fff;
+}
