--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,6 +12,13 @@
     <!-- <script src="main.js"></script> -->
 </head>
 <body>
-    <h1>nigger nogger</h1>
+    <header>
+        <div class="main-text-box">
+            <h1>Jose Villarroel</h1>
+            <h2>software developer</h2>
+            <a class="button button-full" href="#">Projects</a>
+            <a class="button button-outline" href="#">Contact</a>
+        </div>
+    </header>
 </body>
 </html>
