--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1,3 +1,7 @@
+/* -------------------------------------------- */
+/* Initial Setup */
+/* -------------------------------------------- */
+
 * {
     margin: 0;
     padding: 0;
@@ -13,25 +17,23 @@ html {
     text-rendering: optimizeLegibility;
 }
 
+/* -------------------------------------------- */
+/* REUSABLE */
+/* -------------------------------------------- */
+
 .row {
     max-width: 1140px;
     margin: 0 auto;
 }
 
-header {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(/images/main.jpg);
-    height: 100vh;
-    background-size: cover;
-    background-position: center;
-}
+/* 
+BASE COLOR
+2196f3
+*/
 
-.main-text-box {
-    position: absolute;
-    width: 1140px;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%)
-}
+/* -------------------------------------------- */
+/* Headings */
+/* -------------------------------------------- */
 
 h1 {
     margin-top: 0;
@@ -54,6 +56,10 @@ h2 {
     word-spacing: 3px;
 }
 
+/* -------------------------------------------- */
+/* BTNs */
+/* -------------------------------------------- */
+
 .button:link,
 .button:visited {
     display: inline-block;
@@ -61,7 +67,7 @@ h2 {
     font-weight: 300;
     text-decoration: none;
     border-radius: 10rem;
-    transition: background-color 0.3s, border 0.3s, color 0.3s;
+    transition: all 0.3s;
     margin-right: 0.5rem;
 }
 
@@ -92,4 +98,58 @@ h2 {
 .button-outline:active {
     border: 1px solid #0c7cd6;
     color: #fff;
+}
+
+/* -------------------------------------------- */
+/* Header Section */
+/* -------------------------------------------- */
+
+header {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(/images/main.jpg);
+    height: 100vh;
+    background-size: cover;
+    background-position: center;
+}
+
+.main-text-box {
+    position: absolute;
+    width: 1140px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%)
+}
+/* Format for possible brand logo
+.logo {
+    height: 5rem;
+    width: auto;
+    float: left;
+    margin-top: 1rem;
+} */
+
+.main-nav {
+    float: right;
+    list-style: none;
+    margin-top: 3rem;
+}
+
+.main-nav li {
+    display: inline-block;
+    margin-left: 2rem;
+}
+
+.main-nav li a:link,
+.main-nav li a:visited {
+    padding: 0.2rem 0;
+    color: #fff;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 0.9rem;
+    border-bottom: 2px solid transparent;
+    transition: all 0.3s;
+}
+
+.main-nav li a:hover,
+.main-nav li a:active {
+    border-bottom: 2px solid #2196f3;
+    color: #2196f3;
 }
