--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,6 +13,16 @@
 </head>
 <body>
     <header>
+        <nav>
+            <div class="row">
+                <ul class="main-nav">
+                    <li><a href="#">Who am I?</a></li>
+                    <li><a href="#">Skillset</a></li>
+                    <li><a href="#">Work</a></li>
+                    <li><a href="#">Get in Contact</a></li>
+                </ul>
+            </div>
+        </nav>
         <div class="main-text-box">
             <h1>Jose Villarroel</h1>
             <h2>software developer</h2>
