added about me sections and skillset sections using some ICONs from ionicicons, looking nice right now, soon to do project section then conctact section, then make portfolio v2.0 available

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="/vendors/css/grid.css">
     <link rel="stylesheet" type="text/css" media="screen" href="/assets/css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,300,300i,400" rel="stylesheet">
+    <link href="https://unpkg.com/ionicons@4.5.0/dist/css/ionicons.min.css" rel="stylesheet">
     <!-- <script src="main.js"></script> -->
 </head>
 <body>
@@ -18,8 +19,8 @@
                 <ul class="main-nav">
                     <li><a href="#">Who am I?</a></li>
                     <li><a href="#">Skillset</a></li>
-                    <li><a href="#">Work</a></li>
-                    <li><a href="#">Get in Contact</a></li>
+                    <li><a href="#">Github</a></li>
+                    <li><a href="#">Resume</a></li>
                 </ul>
             </div>
         </nav>
@@ -30,5 +31,43 @@
             <a class="button button-outline" href="#">Contact</a>
         </div>
     </header>
+    <section class="aboutme">
+        <div class="row">
+            <h3 class="header-body">About me</h3>
+            <p class="long-p">Greetings, I’m a software developer, FullStack Engineer, blockchain enthusiast and a natural problem solver always looking
+            for new challenges, I am well versed when it comes to JavaScript programming, using it smoothly in almost every aspect of
+            my projects/apps, but I’m always open to learn any stacks if it get things done.<br><br>
+            My motto as a developer is if I am the smartest person in the room, I am in the wrong room. I love learning, and want to become the best developer I can be. I am a maker - I enjoy creating in my career and after hours, and I believe that through great effort and passion your code can change people's lives for the better. 
+            </p>
+        </div>
+    </section>
+    <section class="skills alt">
+        <div class="row">
+            <h3 class="header-body">Skillset</h3>
+            <p class="long-p">These are the fields I'm focused and passionate about as a developer, but be sure to contact me, I might have some extras you might be interested in.</p>
+        </div>
+        <div class="row">
+            <div class="col span-1-of-4 box">
+                <i class="icon i-big ion-logo-sass"></i>
+                <h4>Front-end</h4>
+                <p>As a developer and problem solver, I recognize presentation of a product is key for success, therefore I use tools like <strong>JS, React, Redux, HTML/CSS, SASS/SCSS, ES6/ES2015+, Webpack, Babel and many more</strong> in order to captivate and bring the best experience to my users.</p>
+            </div>
+            <div class="col span-1-of-4 box">
+                <i class="icon i-big ion-logo-nodejs"></i> 
+                <h4>Back-end</h4>
+                <p>Effective data modeling is crucial for good information delivery and usage, using <strong>Node.js, MongoDB or MySQL, GraphQL, Express.js, Laravel and many others</strong> for developing nice and useful API through effective usage of coding design patterns.</p>
+            </div>
+            <div class="col span-1-of-4 box">
+                <i class="icon i-big ion-logo-bitcoin"></i> 
+                <h4>Blockchain</h4>
+                <p>Blockchain disruption started not so long ago, yet it has made data persistence and security work on a whole different level, I use <strong>Web3.js, metamask, Ganache-cli and several truffle tools,</strong> to develop nice and useful smart contracts and dApps</p>
+            </div>
+            <div class="col span-1-of-4 box">
+                <i class="icon i-big ion-logo-ionitron"></i> 
+                <h4>Machine Learning</h4>
+                <p>Currently one of the fields I am most excited about yet one of the least explored by me, currently getting used to effective <strong>design patterns and data algorithms, for deep learning and decision making with TensorflowJS</strong> for developing nice problem solving apps through AI.</p>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
