--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -25,6 +25,15 @@ html {
     max-width: 1140px;
     margin: 0 auto;
 }
+section {
+    padding: 4rem 0;
+}
+.alt {
+    background-color: #f5f5f5;
+}
+.box {
+    padding: 1%;
+}
 
 /* 
 BASE COLOR
@@ -35,25 +44,76 @@ BASE COLOR
 /* Headings */
 /* -------------------------------------------- */
 
-h1 {
-    margin-top: 0;
-    margin-bottom: 0.2rem;
-    color: #fff;
-    font-size: 2.4rem;
-    font-weight: 300;
+h1, h2, h3, h4 {
     text-transform: uppercase;
     letter-spacing: 1px;
+}
+
+h1, h3, h4 {
+    font-weight: 300;
+}
+
+h1, h2 {
+    margin-top: 0;
+    color: #fff;
     word-spacing: 3px;
 }
 
+h1 {
+    margin-bottom: 0.2rem;
+    font-size: 2.4rem;
+}
+
 h2 {
-    margin-top: 0;
     margin-bottom: 1rem;
-    color: #fff;
     font-size: 1.4rem;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    word-spacing: 3px;
+}
+
+h3 {
+    font-size: 1.8rem;
+    word-spacing: 2px;
+    text-align: center;
+    margin-bottom: 1.5rem;
+}
+
+h4 {
+    font-size: 1.1rem;
+    margin-bottom: 0.75rem;
+}
+
+h3::after {
+    display: block;
+    height: 0.1rem;
+    background-color: #2196f3;
+    content: " ";
+    width: 5rem;
+    margin: 0 auto;
+    margin-top: 1.5rem;
+}
+/* -------------------------------------------- */
+/* Paragraph elements */
+/* -------------------------------------------- */
+
+.long-p {
+    line-height: 150%;
+    width: 70%;
+    margin-left: 15%;
+    text-align: justify;
+}
+
+.box p {
+    font-size: 0.9rem;
+    line-height: 140%;
+}
+
+/* -------------------------------------------- */
+/* Icons */
+/* -------------------------------------------- */
+
+.i-big {
+    font-size: 3rem;
+    display: inline-block;
+    color: #2196f3;
 }
 
 /* -------------------------------------------- */
