started project section and trying to make nice animation that shows a small description and links to deployed instance or github, still a work in progress but looks pretty

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,8 +19,8 @@
                 <ul class="main-nav">
                     <li><a href="#">Who am I?</a></li>
                     <li><a href="#">Skillset</a></li>
-                    <li><a href="#">Github</a></li>
-                    <li><a href="#">Resume</a></li>
+                    <li><a href="https://github.com/Wayhem" target="_blank">Github</a></li>
+                    <li><a href="/download" target="_blank">Resume</a></li>
                 </ul>
             </div>
         </nav>
@@ -33,7 +33,7 @@
     </header>
     <section class="aboutme">
         <div class="row">
-            <h3 class="header-body">About me</h3>
+            <h3>About me</h3>
             <p class="long-p">Greetings, I’m a software developer, FullStack Engineer, blockchain enthusiast and a natural problem solver always looking
             for new challenges, I am well versed when it comes to JavaScript programming, using it smoothly in almost every aspect of
             my projects/apps, but I’m always open to learn any stacks if it get things done.<br><br>
@@ -43,7 +43,7 @@
     </section>
     <section class="skills alt">
         <div class="row">
-            <h3 class="header-body">Skillset</h3>
+            <h3>Skillset</h3>
             <p class="long-p">These are the fields I'm focused and passionate about as a developer, but be sure to contact me, I might have some extras you might be interested in.</p>
         </div>
         <div class="row">
@@ -68,6 +68,36 @@
                 <p>Currently one of the fields I am most excited about yet one of the least explored by me, currently getting used to effective <strong>design patterns and data algorithms, for deep learning and decision making with TensorflowJS</strong> for developing nice problem solving apps through AI.</p>
             </div>
         </div>
+    </section>
+    <section class="project-head">
+        <div class="row">
+            <h3>Projects</h3>
+        </div>
+    </section>
+    <section class="projects">
+        <ul class="showcase">
+            <li>
+                <figure class="project-img">
+                    <p><strong>Traderfolio is a project working with React, AJAX calls, ES6, input autocomplete and more. Doing something nice and simple like storing and showing your savings in crypto, uses Cryptocompare API</strong></p>
+                    <img src="/images/traderfolio.png" alt="traderfolio">
+                </figure>
+            </li>
+            <li>
+                <figure class="project-img">
+                    <img src="/images/trust-fund.png" alt="trust fund">
+                </figure>
+            </li>
+            <li>
+                <figure class="project-img">
+                    <img src="/images/parking-villa.png" alt="parking villa">
+                </figure>
+            </li>
+            <li>
+                <figure class="project-img">
+                    <img src="/images/vzla-tours.png" alt="venezuela tours">
+                </figure>
+            </li>
+        </ul>
     </section>
 </body>
 </html>
