--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -106,6 +106,20 @@ h3::after {
     line-height: 140%;
 }
 
+.project-img p {
+    position: absolute;
+    top: 10%;
+    left: 10%;
+    width: 80%;
+    height: 80%;
+    z-index: 10;
+    transition: color 0.2s;
+    opacity: 1;
+    font-weight: 400;
+    overflow: hidden;
+    text-overflow: ellipsis; 
+}
+
 /* -------------------------------------------- */
 /* Icons */
 /* -------------------------------------------- */
@@ -212,4 +226,49 @@ header {
 .main-nav li a:active {
     border-bottom: 2px solid #2196f3;
     color: #2196f3;
+}
+
+/* -------------------------------------------- */
+/* Projects */
+/* -------------------------------------------- */
+
+.showcase {
+    list-style: none;
+    width:100%;
+}
+
+.showcase li {
+    display: block;
+    float: left;
+    width: 25%;
+    background-color: #000;
+    position: relative;
+    z-index: 1;
+}
+
+.project-img {
+    width: 100%;
+    margin: 0;
+    position: relative;
+    color: transparent;
+    overflow: hidden;
+    transition: all 0.4s;
+}
+
+.project-img img {
+    width: 100%;
+    height: auto;
+    transition: all 0.4s;
+}
+
+.project-img:hover {
+    color: #fff;
+}
+
+.project-img:hover img {
+    opacity: 0.4;
+}
+
+.projects {
+    padding: 0;
 }
