finished project section, added 880px media query for floated text to be gone, looks better for smaller screens.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -75,29 +75,72 @@
         </div>
     </section>
     <section class="projects">
-        <ul class="showcase">
+        <ul class="showcase clearfix">
             <li>
-                <figure class="project-img">
-                    <p><strong>Traderfolio is a project working with React, AJAX calls, ES6, input autocomplete and more. Doing something nice and simple like storing and showing your savings in crypto, uses Cryptocompare API</strong></p>
-                    <img src="/images/traderfolio.png" alt="traderfolio">
-                </figure>
+                <a href="https://traderfolio.herokuapp.com/" target="_blank">
+                    <figure class="project-img">
+                        <p><strong>Traderfolio is a project working with React, AJAX calls, ES6, input autocomplete and more. Doing something nice and simple like storing and showing your savings in crypto, uses Cryptocompare API</strong></p>
+                        <img src="/images/traderfolio.png" alt="traderfolio">
+                    </figure>
+                </a>
             </li>
             <li>
+                <a href="https://trust-fund.herokuapp.com/" target="_blank">
                 <figure class="project-img">
+                    <p><strong>TrustFund is a dApp I made based on two small contracts, the logic of the app is like any other crowdfunding site but allows contributor to have a choice on that crowdfunded money, uses Metamask, solidity, GanacheCLI, NextJS, React, Express, JWT and MongoDB for that purpose.</strong></p>
                     <img src="/images/trust-fund.png" alt="trust fund">
                 </figure>
+                </a>
             </li>
             <li>
+                <a href="http://45.77.80.170/" target="_blank">
                 <figure class="project-img">
+                    <p><strong>Parking Villa is a small app I developed in order to test my skills, I had to learn how to use Vue.js and Laravel and also make this app in only 1 week, uses API calls to the website who requested it which is Alegra.com</strong></p>
                     <img src="/images/parking-villa.png" alt="parking villa">
                 </figure>
+                </a>
             </li>
             <li>
+                <a href="https://vzlatours.herokuapp.com/" target="_blank">
                 <figure class="project-img">
+                    <p><strong>Venezuela tours is a small production site I made while learning and practicing the basics of web development, front-end and back-end wise, Uses MongoDB, Express, Passport, Bootstrap, and other tools in order to save and dynamically display toursites, users and comments.</strong></p>
                     <img src="/images/vzla-tours.png" alt="venezuela tours">
                 </figure>
+                </a>
             </li>
         </ul>
+    </section>
+    <section class="project-body">
+        <div class="row">
+            <h3>Repos</h3>
+        </div>
+        <div class="row step-box">
+            <div class="repo-step">
+                <div>1</div>
+                <p><em>Traderfolio:</em> a front-end oriented project.</p>
+                <a href="https://github.com/Wayhem/traderfolio" target="_blank" class="i-small"><i class="icon ion-logo-github">v1</i></a>
+                <a href="https://github.com/Wayhem/traderfoliov2" target="_blank" class="i-small"><i class="icon ion-logo-github">v2</i></a>
+                <a href="https://traderfolio.herokuapp.com/" target="_blank" class="i-small"><i class="icon ion-ios-link"></i></a>
+            </div>
+            <div class="repo-step">
+                <div>2</div>
+                <p><em>TrustFund:</em> a blockchain oriented project.</p>
+                <a href="https://github.com/Wayhem/KSC" target="_blank" class="i-small"><i class="icon ion-logo-github"></i></a>
+                <a href="https://trust-fund.herokuapp.com/" target="_blank" class="i-small"><i class="icon ion-ios-link"></i></a>
+            </div>
+            <div class="repo-step">
+                <div>3</div>
+                <p><em>Parking Villa:</em> a full-stack oriented project.</p>
+                <a href="https://github.com/Wayhem/parking-villa" target="_blank" class="i-small"><i class="icon ion-logo-github"></i></a>
+                <a href="http://45.77.80.170/" target="_blank" class="i-small"><i class="icon ion-ios-link"></i></a>
+            </div>
+            <div class="repo-step">
+                <div>4</div>
+                <p><em>Venezuela Tours:</em> a full-stack oriented project.</p>
+                <a href="https://github.com/Wayhem/vzla-tour" target="_blank" class="i-small"><i class="icon ion-logo-github"></i></a>
+                <a href="https://vzlatours.herokuapp.com/" target="_blank" class="i-small"><i class="icon ion-ios-link"></i></a>
+            </div>
+        </div>
     </section>
 </body>
 </html>
