--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -17,6 +17,15 @@ html {
     text-rendering: optimizeLegibility;
 }
 
+.clearfix {zoom: 1;}
+.clearfix:after {
+    content: '.';
+    clear: both;
+    display: block;
+    height: 0;
+    visibility: hidden;
+}
+
 /* -------------------------------------------- */
 /* REUSABLE */
 /* -------------------------------------------- */
@@ -120,6 +129,11 @@ h3::after {
     text-overflow: ellipsis; 
 }
 
+.repo-step p {
+    padding-top: 0.7rem;
+    float: left;
+}
+
 /* -------------------------------------------- */
 /* Icons */
 /* -------------------------------------------- */
@@ -128,6 +142,23 @@ h3::after {
     font-size: 3rem;
     display: inline-block;
     color: #2196f3;
+}
+
+.i-small:link,
+.i-small:visited {
+    font-size: 2rem;
+    margin-left: 1rem;
+    color: #2196f3;
+    transition: all 0.3s;
+}
+
+.i-small:hover,
+.i-small:active {
+    color: #0c7cd6;
+}
+
+.repo-step i {
+    display: inline-block;
 }
 
 /* -------------------------------------------- */
@@ -229,6 +260,13 @@ header {
 }
 
 /* -------------------------------------------- */
+/* Skills */
+/* -------------------------------------------- */
+.skills .long-p {
+    margin-bottom: 1.5rem;
+}
+
+/* -------------------------------------------- */
 /* Projects */
 /* -------------------------------------------- */
 
@@ -271,4 +309,33 @@ header {
 
 .projects {
     padding: 0;
+}
+
+.step-box {
+    margin-top: 1.5rem;
+    padding-left: 10%;
+    padding-right: 10%;
+}
+
+.repo-step {
+    margin-bottom: 2.5rem;
+}
+
+.repo-step div {
+    color: #2196f3;
+    border: 2px solid #2196f3;
+    border-radius: 50%;
+    height: 2.75rem;
+    width: 2.75rem;
+    text-align: center;
+    padding: 0.25rem;
+    float: left;
+    font-size: 1.5rem;
+    margin-right: 1.25rem
+}
+
+@media only screen and (max-width: 880px) {
+    .step-box p {
+        display: none;
+    }
 }
