--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -8,6 +8,10 @@
     box-sizing: border-box;
 }
 
+*:focus {
+    outline: none;
+}
+
 html {
     background-color: #fff;
     color: #4f4f4f;
@@ -166,7 +170,8 @@ h3::after {
 /* -------------------------------------------- */
 
 .button:link,
-.button:visited {
+.button:visited,
+input[type=submit] {
     display: inline-block;
     padding: 0.5rem 1.5rem;
     font-weight: 300;
@@ -177,7 +182,8 @@ h3::after {
 }
 
 .button-full:link,
-.button-full:visited {
+.button-full:visited,
+input[type=submit] {
     background-color: #2196f3;
     border: 1px solid #2196f3;
     color: #fff;
@@ -190,12 +196,17 @@ h3::after {
 }
 
 .button:hover,
-.button:active {
+.button:active,
+input[type=submit]:hover,
+input[type=submit]:active {
     background-color: #0c7cd6;
+    cursor: pointer;
 }
 
 .button-full:hover,
-.button-full:active {
+.button-full:active,
+input[type=submit]:hover,
+input[type=submit]:active  {
     border: 1px solid #0c7cd6;
 }
 
@@ -332,6 +343,24 @@ header {
     float: left;
     font-size: 1.5rem;
     margin-right: 1.25rem
+}
+
+/* -------------------------------------------- */
+/* Contact */
+/* -------------------------------------------- */
+
+.contact-form {
+    width: 60%;
+    margin: 1rem auto;
+}
+
+input[type=text],
+input[type=email],
+textarea {
+    width: 100%;
+    padding: 0.3rem;
+    border-radius: 3px;
+    border: 1px solid #ccc;
 }
 
 @media only screen and (max-width: 880px) {
