--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="/assets/css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,300,300i,400" rel="stylesheet">
     <link href="https://unpkg.com/ionicons@4.5.0/dist/css/ionicons.min.css" rel="stylesheet">
-    <!-- <script src="main.js"></script> -->
+    <script src='https://www.google.com/recaptcha/api.js'></script>
 </head>
 <body>
     <header>
@@ -110,7 +110,7 @@
             </li>
         </ul>
     </section>
-    <section class="project-body">
+    <section class="project-body alt">
         <div class="row">
             <h3>Repos</h3>
         </div>
@@ -142,5 +142,57 @@
             </div>
         </div>
     </section>
+    <section class="contact">
+        <div class="row">
+            <h3>Be sure to contact me</h3>
+        </div>
+        <div class="row">
+            <form method="POST" action="/" class="contact-form" id="postForm">
+                <div class="row">
+                    <div class="col span-1-of-3">
+                        <label for="name">Name</label>
+                    </div>
+                    <div class="col span-2-of-3">
+                        <input type="text" name="name" id="name" placeholder="Your name">  
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col span-1-of-3">
+                        <label for="email">Email</label>
+                    </div>
+                    <div class="col span-2-of-3">
+                        <input type="email" name="email" id="email" placeholder="example@company.com" required> 
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col span-1-of-3">
+                        <label for="message">Message</label>
+                    </div>
+                    <div class="col span-2-of-3">
+                        <textarea name="message" id="message" rows="6" required></textarea>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col span-1-of-3">
+                        <label for="message">&nbsp;</label>
+                    </div>
+                    <div class="col span-2-of-3">
+                        <div class="g-recaptcha" data-sitekey="6LdHHXwUAAAAAGv_Dmql9JfQ8T1WIvNHK72KMNzo"></div> 
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col span-1-of-3">
+                        <label for="message">&nbsp;</label>
+                    </div>
+                    <div class="col span-2-of-3">
+                        <input type="submit" value="Submit">
+                    </div>
+                </div>
+            </form>
+        </div>
+    </section>
+
+    <script src="/vendors/js/sweetalert2.all.min.js"></script>
+    <script src="/assets/js/custom.js"></script> 
 </body>
 </html>
