footer now done, will add some animations and responsive querys now

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -182,7 +182,7 @@
                 </div>
                 <div class="row">
                     <div class="col span-1-of-3">
-                        <label for="message">&nbsp;</label>
+                        <label>&nbsp;</label>
                     </div>
                     <div class="col span-2-of-3">
                         <input type="submit" value="Submit">
@@ -191,6 +191,26 @@
             </form>
         </div>
     </section>
+
+    <footer>
+        <div class="row">
+            <div class="col span-1-of-2">
+                &nbsp;
+            </div>
+            <div class="col span-1-of-2">
+                <ul class="social">
+                    <li><a href="https://www.linkedin.com/in/jose-villarroel-bouza"><i class="icon ion-logo-linkedin"></a></i></li>
+                    <li><a href="https://github.com/Wayhem"><i class="icon ion-logo-github"></i></a></li>
+                    <li><a href="https://www.instagram.com/jvillarroel94"><i class="icon ion-logo-instagram"></i></a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="row">
+            <p>
+                Copyright &copy; 2019 by Jose Villarroel. MIT license.
+            </p>
+        </div>        
+    </footer>
 
     <script src="/vendors/js/sweetalert2.all.min.js"></script>
     <script src="/assets/js/custom.js"></script> 
