--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -138,6 +138,13 @@ h3::after {
     float: left;
 }
 
+footer p {
+    color: #888;
+    text-align: center;
+    font-size: 0.8rem;
+    margin-top: 1rem;
+}
+
 /* -------------------------------------------- */
 /* Icons */
 /* -------------------------------------------- */
@@ -362,6 +369,62 @@ textarea {
     border-radius: 3px;
     border: 1px solid #ccc;
 }
+
+/* -------------------------------------------- */
+/* Footer */
+/* -------------------------------------------- */
+
+footer {
+    background-color: #333;
+    padding: 2rem;
+}
+
+.social {
+    list-style: none;
+    float: right;
+}
+
+.social li {
+    display: inline-block;
+    margin-right: 1rem;
+}
+
+.social li:last-child {
+    margin: 0;
+}
+
+.social li a:link,
+.social li a:visited {
+    text-decoration: none;
+    color: #888;
+    transition: all 0.3s;
+    font-size: 1.5rem;
+}
+
+.social li a:hover,
+.social li a:active {
+    color: #ddd;
+}
+
+.social li a .ion-logo-instagram:hover,
+.social li a .ion-logo-linkedin:hover,
+.social li a .ion-logo-github:hover {
+    transition: color 0.3s;
+}
+
+.social li a .ion-logo-linkedin:hover {
+    color: #0077b5;
+}
+
+.social li a .ion-logo-github:hover {
+    color: #f5f5f5;
+}
+
+.social li a .ion-logo-instagram:hover {
+    color: #517fa4;
+}
+
+
 
 @media only screen and (max-width: 880px) {
     .step-box p {
