--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,10 +4,11 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Jose Villarroel Portfolio</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="/vendors/css/normalize.css">
     <link rel="stylesheet" type="text/css" href="/vendors/css/grid.css">
     <link rel="stylesheet" type="text/css" media="screen" href="/assets/css/main.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="/assets/css/breakpoints.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,300,300i,400" rel="stylesheet">
     <link href="https://unpkg.com/ionicons@4.5.0/dist/css/ionicons.min.css" rel="stylesheet">
     <script src='https://www.google.com/recaptcha/api.js'></script>
