--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -5,7 +5,8 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
 }
 
 *:focus {
@@ -128,6 +129,7 @@ h3::after {
     width: 80%;
     height: 80%;
     z-index: 10;
+    -webkit-transition: color 0.2s;
     transition: color 0.2s;
     opacity: 1;
     font-weight: 400;
@@ -162,6 +164,7 @@ footer p {
     font-size: 2rem;
     margin-left: 1rem;
     color: #2196f3;
+    -webkit-transition: all 0.3s;
     transition: all 0.3s;
 }
 
@@ -186,6 +189,7 @@ input[type=submit] {
     font-weight: 300;
     text-decoration: none;
     border-radius: 10rem;
+    -webkit-transition: all 0.3s;
     transition: all 0.3s;
     margin-right: 0.5rem;
 }
@@ -230,6 +234,7 @@ input[type=submit]:active  {
 /* -------------------------------------------- */
 
 header {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.7))), url(/images/main.jpg);
     background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(/images/main.jpg);
     height: 100vh;
     background-size: cover;
@@ -241,7 +246,8 @@ header {
     width: 1140px;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%)
+    -webkit-transform: translate(-50%,-50%);
+            transform: translate(-50%,-50%)
 }
 /* Format for possible brand logo
 .logo {
@@ -255,6 +261,7 @@ header {
     float: right;
     list-style: none;
     margin-top: 3rem;
+    margin-bottom: 2rem;
 }
 
 .main-nav li {
@@ -270,6 +277,7 @@ header {
     text-transform: uppercase;
     font-size: 0.9rem;
     border-bottom: 2px solid transparent;
+    -webkit-transition: all 0.3s;
     transition: all 0.3s;
 }
 
@@ -278,6 +286,32 @@ header {
     border-bottom: 2px solid #2196f3;
     color: #2196f3;
 }
+
+/* Sticky nav */
+
+.sticky {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: rgba(255, 255, 255, 0.98);
+    box-shadow: 0 2px 2px #efefef;
+    z-index: 20;
+}
+
+.sticky .main-nav {
+    margin-top: 17px;
+    margin-bottom: 17px;
+}
+
+.sticky .main-nav li a:link,
+.sticky .main-nav li a:visited {
+    padding: 17px 0;
+    color: #555;
+}
+
+.sticky .main-nav li a:hover,
+.sticky .main-nav li a:active {color: #2196f3;}
 
 /* -------------------------------------------- */
 /* Skills */
@@ -310,12 +344,14 @@ header {
     position: relative;
     color: transparent;
     overflow: hidden;
+    -webkit-transition: all 0.4s;
     transition: all 0.4s;
 }
 
 .project-img img {
     width: 100%;
     height: auto;
+    -webkit-transition: all 0.4s;
     transition: all 0.4s;
 }
 
@@ -399,6 +435,7 @@ footer {
 .social li a:visited {
     text-decoration: none;
     color: #888;
+    -webkit-transition: all 0.3s;
     transition: all 0.3s;
     font-size: 1.5rem;
 }
@@ -411,6 +448,7 @@ footer {
 .social li a .ion-logo-instagram:hover,
 .social li a .ion-logo-linkedin:hover,
 .social li a .ion-logo-github:hover {
+    -webkit-transition: color 0.3s;
     transition: color 0.3s;
 }
 
