--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="/vendors/css/normalize.css">
     <link rel="stylesheet" type="text/css" href="/vendors/css/grid.css">
+    <link rel="stylesheet" type="text/css" href="/vendors/css/animate.css">
     <link rel="stylesheet" type="text/css" media="screen" href="/assets/css/main.css">
     <link rel="stylesheet" type="text/css" media="screen" href="/assets/css/breakpoints.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,300,300i,400" rel="stylesheet">
@@ -34,7 +35,7 @@
     <section class="aboutme">
         <div class="row">
             <h3>About me</h3>
-            <p class="long-p">Greetings, I’m a software developer, FullStack Engineer, blockchain enthusiast and a natural problem solver always looking
+            <p class="long-p js-point-5">Greetings, I’m a software developer, FullStack Engineer, blockchain enthusiast and a natural problem solver always looking
             for new challenges, I am well versed when it comes to JavaScript programming, using it smoothly in almost every aspect of
             my projects/apps, but I’m always open to learn any stacks if it get things done.<br><br>
             My motto as a developer is if I am the smartest person in the room, I am in the wrong room. I love learning, and want to become the best developer I can be. I am a maker - I enjoy creating in my career and after hours, and I believe that through great effort and passion your code can change people's lives for the better. 
@@ -46,7 +47,7 @@
             <h3>Skillset</h3>
             <p class="long-p">These are the fields I'm focused and passionate about as a developer, but be sure to contact me, I might have some extras you might be interested in.</p>
         </div>
-        <div class="row">
+        <div class="row js-point-1">
             <div class="col span-1-of-4 box">
                 <i class="icon i-big ion-logo-sass"></i>
                 <h4>Front-end</h4>
@@ -114,7 +115,7 @@
         <div class="row">
             <h3>Repos</h3>
         </div>
-        <div class="row step-box">
+        <div class="row step-box js-point-2">
             <div class="repo-step">
                 <div>1</div>
                 <p><em>Traderfolio:</em> a front-end oriented project.</p>
@@ -143,7 +144,7 @@
         </div>
     </section>
     <section class="contact">
-        <div class="row">
+        <div class="row js-point-3">
             <h3>Be sure to contact me</h3>
         </div>
         <div class="row">
@@ -198,7 +199,7 @@
                 &nbsp;
             </div>
             <div class="col span-1-of-2">
-                <ul class="social">
+                <ul class="social js-point-4">
                     <li><a href="https://www.linkedin.com/in/jose-villarroel-bouza"><i class="icon ion-logo-linkedin"></a></i></li>
                     <li><a href="https://github.com/Wayhem"><i class="icon ion-logo-github"></i></a></li>
                     <li><a href="https://www.instagram.com/jvillarroel94"><i class="icon ion-logo-instagram"></i></a></li>
