--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,17 +12,28 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,300,300i,400" rel="stylesheet">
     <link href="https://unpkg.com/ionicons@4.5.0/dist/css/ionicons.min.css" rel="stylesheet">
     <script src='https://www.google.com/recaptcha/api.js'></script>
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16x16.png">
+    <link rel="manifest" href="/icons/site.webmanifest">
+    <link rel="mask-icon" href="/icons/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="/icons/favicon.ico">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-config" content="/icons/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
 </head>
 <body>
     <header>
         <nav>
             <div class="row">
-                <ul class="main-nav">
+                <ul class="main-nav hidden">
                     <li><a class="js--nav-aboutme" href="#">Who am I?</a></li>
                     <li><a class="js--nav-skills" href="#">Skillset</a></li>
                     <li><a href="https://github.com/Wayhem" target="_blank">Github</a></li>
                     <li><a href="/download" target="_blank">Resume</a></li>
                 </ul>
+                <a class="burger-x"><i class="icon ion-ios-menu js-icon"></i></a>
             </div>
         </nav>
         <div class="main-text-box">
