--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,7 @@
         <link rel="stylesheet" type="text/css" href="/vendors/css/normalize.css">
         <link rel="stylesheet" type="text/css" href="/vendors/css/grid.css">
         <link rel="stylesheet" type="text/css" href="/vendors/css/animate.css">
+        <link rel="stylesheet" type="text/css" href="/vendors/css/loading.css">        
         <link rel="stylesheet" type="text/css" media="screen" href="/assets/css/main.css">
         <link rel="stylesheet" type="text/css" media="screen" href="/assets/css/breakpoints.css">
         <link href="https://fonts.googleapis.com/css?family=Raleway:100,300,300i,400" rel="stylesheet">
@@ -198,9 +199,13 @@
                         </div>
                         <div class="col span-2-of-3">
                             <input type="submit" value="Submit">
+                            <div class="ld ld-spinner ld-spin"></div>
                         </div>
                     </div>
                 </form>
+                <div class="i-huge">
+                    <i class="icon ion-ios-cloud-done fadeIn"></i> 
+                </div>
             </div>
         </section>
 
