--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -505,3 +505,30 @@ footer {
 .js-point-3.animated {opacity: 1;}
 
 .js-icon {transition: all 0.3s;}
+
+.loader{
+    margin: 0 0 2em;
+    height: 100vh;
+    width: 100%;
+    text-align: center;
+    padding: 1em;
+    margin: 0 auto 1em;
+    display: inline-block;
+    vertical-align: top;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: #2B3134;
+    z-index: 100;
+}
+
+.loader svg {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    margin-left: -50px;
+    margin-top: -50px;
+}
+
+svg path,
+svg rect{fill: #2196f3;}
