--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -506,7 +506,75 @@ footer {
 
 .js-icon {transition: all 0.3s;}
 
-.loader{
+.preloader {
+    margin: 25% auto;
+    width: auto;
+    height: 100vh;
+    text-align: center;
+    align-items: center;
+    font-size: 10px;
+    position: fixed;
+    top: 0;
+    left: 48%;
+  }
+
+  .loader {
+    background-color: #2B3134;
+    height: 100vh;
+    width: 100%;
+    position: fixed;
+    z-index: 100;
+    top: 0;
+    left: 0;
+    display: block;
+  }
+
+  .preloader > div {
+    background-color: #2196f3;
+    height: 10px;
+    width: 10px;
+    border-radius: 50%;
+    display: inline-block;
+    
+    -webkit-animation: stretchdelay 0.7s infinite ease-in-out;
+    animation: stretchdelay 0.7s infinite ease-in-out;
+  }
+
+  .preloader .circ2 {
+    -webkit-animation-delay: -0.6s;
+    animation-delay: -0.6s;
+  }
+
+  .preloader .circ3 {
+    -webkit-animation-delay: -0.5s;
+    animation-delay: -0.5s;
+  }
+
+  .preloader .circ4 {
+    -webkit-animation-delay: -0.4s;
+    animation-delay: -0.4s;
+  }
+
+  .preloader .circ5 {
+    -webkit-animation-delay: -0.3s;
+    animation-delay: -0.3s;
+  }
+
+  @-webkit-keyframes stretchdelay {
+    0%, 40%, 100% { -webkit-transform: translateY(-10px) }  
+    20% { -webkit-transform: translateY(-20px) }
+  }
+
+  @keyframes stretchdelay {
+    0%, 40%, 100% { 
+      transform: translateY(-10px);
+      -webkit-transform: translateY(-10px);
+    } 20% {
+      transform: translateY(-20px);
+      -webkit-transform: translateY(-20px);
+    }
+  }
+/* .loader{
     margin: 0 0 2em;
     height: 100vh;
     width: 100%;
@@ -531,4 +599,4 @@ footer {
 }
 
 svg path,
-svg rect{fill: #2196f3;}
+svg rect{fill: #2196f3;} */
